# modric-cli

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
modric_cli/: __init__.py  __main__.py  client.py  config.py  io_util.py  output.py  search.py  session.py  updater.py
modric_cli/commands/: __init__.py  auth.py  configmaps.py  definitions.py  jobs.py  machines.py  scripts.py  triggers.py  upgrade.py
scripts/: install-skill.ps1  install-skill.sh  install.ps1  install.sh  release.sh  uninstall-skill.ps1  uninstall-skill.sh  uninstall.ps1  uninstall.sh
skills/claude-code/: SKILL.md
skills/codex/: AGENTS-snippet.md
tests/: conftest.py  test_cli.py  test_config.py  test_search.py  test_updater.py
